# SensEURCity-InfluxDB-Upload

./: .coverage  .env  .gitignore  Pipfile  README.md  justfile  makefile  pyproject.toml  requirements.txt  test.ipynb
.github/workflows/: docs.yml  tests.yml
docs/: index.html  search.js  senseurcity.html
docs/senseurcity/: data.html  senseurcity.html
src/senseurcity/: __init__.py  data.py  engine.py  main.py  orm.py  zipped.py
src/senseurcity/files/json/: conversion.json  devices.json  header.json
tests/: conftest.py  test_data.py  test_main.py  test_orm.py  test_orm_pgsql.py  test_orm_sqlite.py  test_zipped.py
tests/test_zipped/: Antwerp_402B00.csv  Antwerp_402B01.csv  Oslo_64A291.csv  Zagreb_64C52B.csv  Zagreb_64C52C.csv
