[project]
name = "senseurcity"
version = "0.1.0"
requires-python = ">=3.11"
description = "Reformat SensEURCity data to SQL DB"
authors = [
	{name="Idris Hayward", email="id.hayward@caegeidwad.dev"}
]
license = { file = "LICENSE" }
classifiers = [
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Operating System :: OS Independent"
]
readme = "README.md"
keywords = ["SensEURCity"]
dependencies = [
    "pandas>=2.3.2",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.43",
]

[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
senseurcity = "senseurcity.main:cli"

[tool.setuptools.package-data]
"senseurcity.files.json" = ["*.json"]

[tool.pytest.ini_options]
testpaths = [
	"tests"
]

markers = [
	"orm",
	"sqlite",
	"postgres",
	"base_v1",
	"zipfile",
	"data"
]

addopts = [
	"--html=reports/tests/index.html",
	"--self-contained-html",
	"--cov-fail-under=99",
	"--cov-report=html:reports/coverage",
	"--cov-report=term-missing",
	"--cov=senseurcity"
]

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true

[tool.tox]
legacy_tox_ini = """
	[tox]
	minversion = 4.0
	envlist = py312, py313, ruff, mypy
	isolated_build = true

	[gh-actions]
	python =
		3.12: py312
		3.13: py313, mypy, ruff

	[testenv]
	setenv =
		PYTHONPATH = {toxinidir}
	deps =
		-r{toxinidir}/requirements.txt
	commands =
		pytest --basetemp={envtmpdir}

	[testenv:ruff]
	basepython = python3.12
	deps = -r requirements.txt
	commands = ruff check src tests

	[testenv:mypy]
	basepython = python3.12
	deps = -r requirements.txt
	commands = mypy src
"""

[tool.pyright]
venvPath = ""
venv = ".venv"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pdoc>=15.0.4",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-html>=4.1.1",
    "ruff>=0.13.1",
    "types-requests>=2.32.4.20250913",
]

dev-postgres = [
    "psycopg[binary]>=3.2.10",
    "testcontainers[postgres]>=4.13.1"
]

postgres = [
    "psycopg>=3.2.10"
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "S101",  # use of "assert"
    "S102",  # use of "exec"
    "S106",  # possible hardcoded password.
]
